--- a/plugins/blog/app/stylesheets/blog.scss
+++ b/plugins/blog/app/stylesheets/blog.scss
@@ -27,6 +27,9 @@
 minds-blog-view{
   h1{
     margin:0;
+    @media screen and (max-width: $max-mobile){
+      font-size:28px;
+    }
   }
   a {
     color:#607d8b;
